--- a/style.css
+++ b/style.css
@@ -6,96 +6,47 @@ html, body{
     height: 100vh ;
 }
 
-.box{
-    margin:0;
-    padding: 0;
-}
 
 .flex-div{
     display: flex;
     align-items: center;
 }
+/*NAV BAR*/
 
-.nav-top{
-    padding: 10px 2%;
-    justify-content: space-between;
-    width: 100%;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    background: #fff;
-    position: fixed;
-    top: 0;
-    left: 0;
+#navTop{
+    height: 60px;
+    background: rgba(10, 10, 10, 0.4) 
 }
-/* .nav-right img{
-    width: 25px;
-    margin-right:25px ;
-    
-} */
-/* .nav-right .useravt{
-    width:30px;
-    height:30px;
-    object-fit:cover;
-    border-radius:50%;
-} */
 
 /* LEFT */
-.nav-left span{
-    width: 22px;
-    margin-right: 25px;
-}
 .nav-left .logo{
-    width:50px;
-    margin: 0;
+    width:80px;
+    margin-left: 25px;
 }
 /* MIDDLE */
-.nav-middle .search-box{
+.nav-middle{
     display: flex;
-    border: 1px solid #ccc;
-    margin-right: 15px;
-    padding: 5px 12px;
-    border-radius: 2px;
+    align-items: center;
 }
-.nav-middle .search-box input{
-    width: 400px;
-    border: 0;
-    outline: 0;
-    background: transparent;
+.nav-middle .search-bar{
+    display: inline-block;
+  width: 1000px;
 }
-.nav-middle .search-box button{
-    /* padding: 0;
-    margin: 0;
-    width: 50px;
-    border: 0; */
-    border: 1px solid var(--ytd-searchbox-legacy-button-border-color);
-    border-radius: 0 2px 2px 0;
-    cursor: pointer;
-    height: 40px;
-    width: 64px;
-    margin: 0;
-  
 }
 /* RIGHT */
 .nav-right {
     display: flex;
     align-items: center;
 }
-.nav-right button{
-    display: flex;
-    align-items: center;
-    padding: 8px 10px;
-    border: 1.5px solid rgb(42, 42, 250);;
-    border-radius: 3px;
-    font-size: 0.75rem;
-    color: rgb(42, 42, 250);
-    background: transparent;
-}
-.nav-right span{
-    margin-right: 5px;
-    color: rgb(42, 42, 250);
-    background: transparent;
-}
-
-
 .carousel-caption{
-    bottom: 220px;
+    position: absolute;
+    width: 1140px;
+    top: 50%; /*cách điểm trên 50% */
+    left: 50%;/*cách điểm trái 50% */
+    transform: translate(-50%, -50%); /*căn chỉnh về giữa */
+}
+
+
+.slide{
+    position: fixed;
 }
