loi hien thi anh

--- a/css/admin-style.css
+++ b/css/admin-style.css
@@ -8,8 +8,10 @@ body{
     margin-left: 25px;
 }
 
-.avatar{
+ .avatar{
     height: 35px;
     width: 35px;
     border-radius: 50%;
+    cursor: pointer;
 }
+
